# sisi-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.yaml  config.multilayer.yaml  photon_log.hpp  sisi.cpp  sisi.hpp  validate_patterson_fig7_Kienle.py
tools/visual_studio/: launch.vs.example.json
